apps/production/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  namespace: argocd
  # annotations:
  #   cert-manager.io/cluster-issuer: "production-letsencrypt"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - "argocd.gomes.dev"
  #   secretName: argocd-letsencrypt-tls
  rules:
  - host: argocd.gomes.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
